src/objects/Credit_Decision_Engine_Endpoints__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Host__c</fullName>
        <description>PROD: CIS 
UAT: STAR</description>
        <label>DB Host</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Mode__c</fullName>
        <label>Operating Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>testing</fullName>
                    <default>true</default>
                    <label>testing</label>
                </value>
                <value>
                    <fullName>live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preamble__c</fullName>
        <label>Preamble</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Keyword__c</fullName>
        <description>PROD: DXP1
UAT: XXP1</description>
        <label>RR Keyword</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcode__c</fullName>
        <label>Subcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Credit Decision Engine Endpoints</label>
    <pluralLabel>Credit Decision Engine Endpoints</pluralLabel>
</CustomObject>